@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2008  Vasco Nunes, Piotr Ożarowski
 
 
+2009-01-03  Michael Jahn
+	* [#313012] correctly round ratings
+
 2009-01-02  Michael Jahn
 	* PTGate movie plugin updated
 
